--- a/Installer.Microsoft.ServiceCollection/Installer.Microsoft.ServiceCollection.csproj
+++ b/Installer.Microsoft.ServiceCollection/Installer.Microsoft.ServiceCollection.csproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
+    <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
 </Project>
