--- a/Installer.ConsumerWebAppSupperClean/Installer.ConsumerWebAppSupperClean.csproj
+++ b/Installer.ConsumerWebAppSupperClean/Installer.ConsumerWebAppSupperClean.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Installer.Microsoft.ServiceCollection\Installer.Microsoft.ServiceCollection.csproj" />
+  </ItemGroup>
+
 </Project>
